<resources>
    <string name="app_name">WorkUp</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="btn_login">Login</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tv_login_with_google">Login with Google</string>
    <string name="tv_login_with_facebook">Login with facebook</string>
    <string name="btn_register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="btn_add_card">Add card</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="display_name">Display name</string>
    <string name="action_logout">Logout</string>
    <string name="title" >Title</string>
    <string name="description">Description</string>
    <string name="action_add">Add card</string>
    <string name="action_move_list">Move list</string>
    <string name="action_archive_list">Archive list</string>
    <string name="action_delete">Delete list</string>

    <string name="action_open">Open</string>
    <string name="action_save">Save</string>
    <string name="action_set_as_background">Set as image cover</string>
    <string name="tv_display_name">Display name :</string>
    <string name="tv_email">Email :</string>
    <string name="tv_joinded_date">Joined date :</string>
    <string name="tv_uid">Uid :</string>
    <string name="tv_photo_url">Photo url :</string>
    <string name="action_profile">Profile</string>
</resources>
