<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.example.viet.workup.ui.register.RegisterActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_horizontal_margin"
        android:layout_marginRight="@dimen/default_horizontal_margin"
        android:backgroundTint="@android:color/white"
        android:textColorHint="@android:color/white">

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:backgroundTintMode="src_atop"
            android:hint="@string/user_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_horizontal_margin"
        android:layout_marginRight="@dimen/default_horizontal_margin"
        android:backgroundTint="@android:color/white"
        android:textColorHint="@android:color/white">

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:backgroundTintMode="src_atop"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button_cancel_press"
            android:text="@string/btn_cancel"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/default_horizontal_margin"
            android:background="@drawable/selector_button_login_press"
            android:text="@string/btn_register"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>
